    * much more customizable and portable build system
          o also for asterisk-addons
    * Radius CDR logging
    * SNMP support
    * SMDI (Simplified Message Desk Interface) support
    * Redesign of MusicOnHold configuration settings
    * Manager over HTTP
    * Significant chan_skinny updates
    * Significant chan_misdn updates
    * Improved SIP transfers
    * Much improved support for SIP video
    * Control over SIP transfers and subscriptions (enable/disable per device)
    * ChanSpy whisper mode (Whisper Paging)
    * Configurable language support for saying dates and times
    * Significant architecture improvements for memory usage and performance
    * Media-only IAX2 transfers
    * Updates to the Radio Repeater app code
    * Deprecation of AgentCallbackLogin in favor of a dialplan-based solution
    * uClibc builds supported
    * Work done for freeBSD portability
    * Work done for Solaris portability
    * FreeTDS-based database can be used with Realtime
    * New internal data structure, stringfields, is implemented in IAX and SIP, reducing memory consumption by about 50%.
    * Use of thread local storage for reduced memory allocation/freeing and lower stack consumption
    * Reorganized files into docs/ main/ configs/, including name changes in some cases
    * Much effort was expended in arranging documentation in source files in doxygen format
    * Improved IP TOS support for IAX and SIP
    * Builtin mini HTTP server
    * Added support for Sigma Designs cards.
    * Frame header caching to reduce memory allocation/freeing
    * Passthrough and record/playback support for G.722 wideband audio
    * using mpg123 to play MP3 files for music-on-hold will be deprecated in 1.4 (start using the "native support")
    * New Apps:
         1. AMD() ;; Answering Machine Detection
         2. ChannelRedirect() ;; asynch goto, redirect chan to context/exten/priority